--- a/.htaccess
+++ b/.htaccess
@@ -18,3 +18,5 @@ RewriteRule ^(.*)$ index.php
 #RewriteCond %{REQUEST_FILENAME} -d
 #RewriteRule ^.*$ - [L]
 #RewriteRule ^.*$ index.php [L]
+
+#teast
